@@ -4,6 +4,10 @@
         "hostname": "host.example.com",
         "name": "host.example.com"
     },
+    "@metadata": {
+        "beat": "noindex",
+        "type": "doc"
+    },
     "metricset": {
         "module": "system",
         "name": "filesystem",
@@ -11,18 +15,18 @@
     },
     "system": {
         "filesystem": {
-            "available": 38688276480,
-            "device_name": "none",
-            "files": 3940352,
-            "free": 41930997760,
-            "free_files": 3276976,
+            "available": 105569656832,
+            "device_name": "/dev/disk1",
+            "type": "hfs",
+            "files": 4294967279
+            "free": 105831800832,
+            "free_files": 4292793781,
             "mount_point": "/",
-            "total": 63371726848,
+            "total": 249779191808,
             "used": {
-                "bytes": 21440729088,
-                "pct": 0.3383
-            }
+                "bytes": 143947390976,
+                "pct": 0.5763
+            },
         }
-    },
-    "type": "metricsets"
+    }
 }
