@@ -12,6 +12,10 @@
       type: keyword
       description: >
         The disk name. For example: `/dev/disk1`
+    - name: type
+      type: keyword
+      description: >
+        The disk type. For example: `ext4`
     - name: mount_point
       type: keyword
       description: >
