@@ -6,6 +6,8 @@ import (
 	"path/filepath"
 	"time"
 
+	"runtime"
+
 	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/metricbeat/module/system"
 	sigar "github.com/elastic/gosigar"
@@ -16,6 +18,7 @@ type FileSystemStat struct {
 	DevName     string  `json:"device_name"`
 	Mount       string  `json:"mount_point"`
 	UsedPercent float64 `json:"used_p"`
+	SysTypeName string  `json:"type"`
 	ctime       time.Time
 }
 
@@ -46,10 +49,18 @@ func GetFileSystemStat(fs sigar.FileSystem) (*FileSystemStat, error) {
 		return nil, err
 	}
 
+	var t string
+	if runtime.GOOS == "windows" {
+		t = fs.TypeName
+	} else {
+		t = fs.SysTypeName
+	}
+
 	filesystem := FileSystemStat{
 		FileSystemUsage: stat,
 		DevName:         fs.DevName,
 		Mount:           fs.DirName,
+		SysTypeName:     t,
 	}
 
 	return &filesystem, nil
@@ -66,6 +77,7 @@ func AddFileSystemUsedPercentage(f *FileSystemStat) {
 
 func GetFilesystemEvent(fsStat *FileSystemStat) common.MapStr {
 	return common.MapStr{
+		"type":        fsStat.SysTypeName,
 		"device_name": fsStat.DevName,
 		"mount_point": fsStat.Mount,
 		"total":       fsStat.Total,
